@@ -1381,6 +1381,12 @@ All log files are written in english</p>
 <p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; Miscellaneous settings &rarr; Display news from coppermine-gallery.net</p>
 <a name="admin_general_coppermine_news_end"></a>
 
+<a name="the_active_storage_module"></a><h2>The active storage module<a href="#the_active_storage_module" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
+<a name="active_storage_module"></a><h3>Active storage module<a href="#active_storage_module" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+<p>Here you can select the active storage module. This is usually done at install time, so don't change it if you don't know what it does.</p>
+<p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; The active storage module &rarr; Active storage module</p>
+<a name="active_storage_module_end"></a>
+
 <script type="text/javascript">
   cpgDocFooter();
   dateRevision(' $LastChangedDate: 2008-04-29 16:28:34 +0200 (Di, 29 Apr 2008) $ ', ' $Revision: 4411 $ ');
